--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <div class="process__item">
                             <div class="process__item-wrap">
                                 <img src="img/icon1.png" class="process__img" alt="">
-                                <div>
+                                <div class="process__cnt-wrap">
                                     <h3 class="process__ttl">Online Application</h3>
                                     <p class="process__cnt">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
                                 </div>
@@ -78,7 +78,7 @@
                         <div class="process__item">
                             <div class="process__item-wrap">
                                 <img src="img/icon2.png" class="process__img" alt="">
-                                <div>
+                                <div class="process__cnt-wrap">
                                     <h3 class="process__ttl">Get Approval</h3>
                                     <p class="process__cnt">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
                                 </div>
@@ -87,7 +87,7 @@
                         <div class="process__item">
                             <div class="process__item-wrap">
                                 <img src="img/icon3.png" class="process__img" alt="">
-                                <div>
+                                <div class="process__cnt-wrap">
                                     <h3 class="process__ttl">Get Your Card</h3>
                                     <p class="process__cnt">Information in the database is published in two formats. It is available in PDF comparison according to type of credit card.</p>
                                 </div>
